# VITProject

./: .gitignore  Dockerfile.trt723  ViT_NViT-B_16L12A12CalibCache  benchmark.txt  builder.py  builder.sh  calibrator.py  model2onnx.py  profile.json  profile_plugin.json  run_docker.sh  train.py  trt_helper.py  valid_onnx.py  valid_trt.py
LayerNormPlugin/: CMakeLists.txt  Makefile  build.sh  layer_norm_engine.trt  layernorm_kernel.cu  layernorm_plugin.cpp  layernorm_plugin.h  trt_helper.py
